--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -9,7 +9,7 @@
                 <a href="{% url 'products' %}?category=midrange_multi" class="dropdown-item ">Midrange/Multi</a>
                 <a href="{% url 'products' %}?category=fairway_driver" class="dropdown-item ">Fairway Driver</a>
                 <a href="{% url 'products' %}?category=distance_driver" class="dropdown-item ">Distance Driver</a>
-                <a href="{% url 'products' %}?category=accesories" class="dropdown-item">Accesories</a>
+                <a href="{% url 'products' %}?category=bundels_accesories" class="dropdown-item">Bundels/Accesories</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
