--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,8 @@
                 <p class="h4 text-white">You're Home</p>
                 <div class="my-3">
                     <h4>
-                        <a href="{% url 'products' %}" class="btn rounded-pill border-danger text-white  bg-danger shop-now-btn">
+                        <a href="{% url 'products' %}"
+                            class="btn rounded-pill border-danger text-white  bg-danger shop-now-btn">
                             Shop Now
                         </a>
                     </h4>
@@ -23,9 +24,9 @@
     </div>
 </div>
 <section>
-    <div class="container-fluid product-container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col text-center page-header">
+            <div class="col text-center page-header pt-5">
                 <h2 class="logo-font">Best Rated Discs</h2>
                 <hr class="w-50 mb-1">
             </div>
@@ -33,27 +34,27 @@
         <div class="row">
             {% for product in products %}
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-5">
-            <div class="card border-0">
-                {% if product.image %}
-                <a href="{% url 'product_detail' product.id %}">
-                    <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
-                </a>
-                {% else %}
-                <a href="{% url 'product_detail' product.id %}">
-                    <img class="card-img-top" src="{{ MEDIA_URL}}noimageplaceholder.png" alt="{{ product.name }}">
-                </a>
-                {% endif %}
-                <div class="card-body border">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="card-text">{{ product.description |truncatechars:154 }}</p>
-                    {% if product.discount_percentage %}
-                        <p class="card-text text-danger">{{ product.get_discounted_price| floatformat:2}}$</p>
+                <div class="card border-0">
+                    {% if product.image %}
+                    <a href="{% url 'product_detail' product.id %}">
+                        <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    </a>
                     {% else %}
-                        <p class="card-text">{{ product.price }}$</p>
+                    <a href="{% url 'product_detail' product.id %}">
+                        <img class="card-img-top" src="{{ MEDIA_URL}}noimageplaceholder.png" alt="{{ product.name }}">
+                    </a>
                     {% endif %}
-                  <p class="card-text">{{ product.rating }} / 5 <i class="fas fa-star"></i></p>
+                    <div class="card-body border">
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p class="card-text">{{ product.description |truncatechars:154 }}</p>
+                        {% if product.discount_percentage %}
+                        <p class="card-text text-danger">{{ product.get_discounted_price| floatformat:2}}$</p>
+                        {% else %}
+                        <p class="card-text">{{ product.price }}$</p>
+                        {% endif %}
+                        <p class="card-text">{{ product.rating }} / 5 <i class="fas fa-star"></i></p>
+                    </div>
                 </div>
-              </div>
             </div>
             {% endfor %}
         </div>
@@ -64,11 +65,11 @@
 {% block extra_js %}
 {{ block.super }}
 <script type="text/javascript">
-    document.addEventListener('scroll', (e) => {
+   document.addEventListener('scroll', (e) => {
         let scroll = this.scrollY;
-        hide_header(scroll)
+        hide_header_home(scroll)
     })
-    function hide_header(scrollposition) {
+    function hide_header_home(scrollposition) {
         var header = document.getElementById('header')
         if (scrollposition < 500) {
             header.classList.remove('d-none')
@@ -79,6 +80,5 @@
         }
 
     }
-
 </script>
 {% endblock %}
