--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div id="page-header"  class="row">
-        <div class="col text-center">
+        <div class="col text-center" id="select-container">
             <h2 class="logo-font">Products</h2>
             <hr class="w-50 mb-1">
             <div class="sort-select-wrapper w-25 pt-3">
@@ -48,11 +48,11 @@
         <div class="card border-0">
             {% if product.image %}
             <a href="{% url 'product_detail' product.id %}">
-                <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+                <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
             </a>
             {% else %}
             <a href="{% url 'product_detail' product.id %}">
-                <img class="card-img-top" src="{{ MEDIA_URL}}noimageplaceholder.png" alt="{{ product.name }}">
+                <img class="card-img-top img-fluid" src="{{ MEDIA_URL}}noimageplaceholder.png" alt="{{ product.name }}">
             </a>
             {% endif %}
             <div class="card-body border">
