Adjust page headers

--- a/course_reviews/templates/course_reviews/course_reviews.html
+++ b/course_reviews/templates/course_reviews/course_reviews.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid product-container ">
-    <div id="page-header" class="row">
-        <div class="col text-center">
+    <div class="row">
+        <div class="col text-center page-header pt-5">
             <h2 class="logo-font">Course Reviews</h2>
             <hr class="w-50 mb-1">
         </div>
