--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid product-container ">
-    <div id="page-header" class="row">
-        <div class="col text-center">
+    <div class="row">
+        <div class="col text-center page-header pt-5">
             <h2 class="logo-font">About Us</h2>
             <hr class="w-50 mb-1">
-        </div>
+    </div>
     </div>
     <div class="row text-center pt-3">
         <div class="col-lg-12  d-flex justify-content-center">
