--- a/home/templates/home/deals.html
+++ b/home/templates/home/deals.html
@@ -13,34 +13,34 @@
             </ol>
         </div>
     </div>
-    <div id="page-header"  class="row">
-        <div class="col text-center">
+    <div class="row">
+        <div class="col text-center page-header pt-5">
             <h2 class="logo-font">Deals</h2>
             <hr class="w-50 mb-1">
-            <div class="sort-select-wrapper w-25 pt-3">
-                <select id="sort-selector"
-                    class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
-                    </option>
-                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price
-                        (low to high)</option>
-                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
-                        (high to low)</option>
-                    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
-                        Rating (low to high)</option>
-                    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
-                        Rating (high to low)</option>
-                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name
-                        (A-Z)</option>
-                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name
-                        (Z-A)</option>
-                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
-                        Category (A-Z)</option>
-                    <option value="category_desc"
-                        {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                </select>
-            </div>
         </div>
+    </div>
+    <div class="sort-select-wrapper w-25 pt-3">
+        <select id="sort-selector"
+            class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
+            </option>
+            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price
+                (low to high)</option>
+            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
+                (high to low)</option>
+            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
+                Rating (low to high)</option>
+            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
+                Rating (high to low)</option>
+            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name
+                (A-Z)</option>
+            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name
+                (Z-A)</option>
+            <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                Category (A-Z)</option>
+            <option value="category_desc"
+                {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+        </select>
     </div>
     <div class="row">
         {% for product in products %}
