--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
 <section>
     <div class="container-fluid">
         <div class="row">
-            <div class="col text-center page-header pt-5">
+            <div class="col text-center pt-5">
                 <h2 class="logo-font">Best Rated Discs</h2>
                 <hr class="w-50 mb-1">
             </div>
