Tweak templates to be more responsive

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block content %}
 <div class="container product-container">
-    <div id="page-header" class="row">
-        <div class="col text-center">
+    <div class="row">
+        <div class="col page-header text-center pt-5">
             <h1 class="logo-font">Checkout</h1>
             <hr class="mb-1 w-100">
         </div>
