--- a/home/templates/home/deals.html
+++ b/home/templates/home/deals.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid product-container ">
-    <div class="row pt-4">
-        <div class="col-lg-12 home-link">
+    <div class="row pt-4 pb-3">
+        <div class="col-lg-12">
             <ol id="breadcrumb" class="breadcrumb w-25">
                 <li class="breadcrumb-item" aria-current="page">
                     <i class="fas fa-home "></i>
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col text-center page-header pt-5">
+        <div class="col text-center page-header">
             <h2 class="logo-font">Deals</h2>
             <hr class="w-50 mb-1">
         </div>
