--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block content %}
  {% if user.is_superuser %}
-    <div class="col product-form">
+    <div class="col">
         <div class="row">
-            <div class="col text-center page-header">
-                <h2 class="logo-font">Add Product</h2>
-                <hr class="w-50 mb-1">
+            <div class="col page-header text-center pt-5">
+                <h1 class="logo-font">Add Product</h1>
+                <hr class="mb-1 w-50">
             </div>
         </div>
         <div class="row d-flex justify-content-center">
