--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 <div class="container product-container">
-    <div class="row pt-4">
-        <div class="col-lg-12 home-link">
+    <div class="row breadcrumbs-product-details">
+        <div class="col-lg-12">
             <ol id="breadcrumb" class="breadcrumb w-50">
                 <li class="breadcrumb-item" aria-current="page">
                     <i class="fas fa-home "></i>
@@ -22,14 +22,8 @@
             </ol>
         </div>
     </div>
-    <div id="page-header"  class="row">
-        <div class="col text-center">
-            <h2 class="logo-font">Products</h2>
-            <hr class="w-50 mb-1">
-        </div>
-    </div>
     <section>
-        <div class="container px-4 px-lg-5 my-5">
+        <div class="container px-4 px-lg-5 my-5" id="products-detail-container">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 {% if product.image %}
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ product.image.url }}"
@@ -51,7 +45,7 @@
                         <span class="text-decoration-line-through"><strong>Price:</strong>{{product.price}}$</span>
                         {% endif %}
                     </div>
-                    <p class="lead"><strong>Product Description:</strong></p>
+                    <p class="lead"><strong>Desc:</strong></p>
                     <p>{{product.description}}</p>
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
