--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid product-container ">
-    <div class="row pt-4">
-        <div class="col-lg-12 home-link">
+    <div class="row pt-4 pb-3">
+        <div class="col-lg-12">
             <ol id="breadcrumb" class="breadcrumb w-25">
                 <li class="breadcrumb-item" aria-current="page">
                     <i class="fas fa-home "></i>
@@ -13,34 +13,34 @@
             </ol>
         </div>
     </div>
-    <div id="page-header"  class="row">
-        <div class="col text-center" id="select-container">
+    <div class="row">
+        <div class="col text-center page-header">
             <h2 class="logo-font">Products</h2>
             <hr class="w-50 mb-1">
-            <div class="sort-select-wrapper w-25 pt-3">
-                <select id="sort-selector"
-                    class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
-                    </option>
-                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price
-                        (low to high)</option>
-                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
-                        (high to low)</option>
-                    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
-                        Rating (low to high)</option>
-                    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
-                        Rating (high to low)</option>
-                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name
-                        (A-Z)</option>
-                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name
-                        (Z-A)</option>
-                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
-                        Category (A-Z)</option>
-                    <option value="category_desc"
-                        {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                </select>
-            </div>
         </div>
+    </div>
+    <div class="sort-select-wrapper w-25 pt-3">
+        <select id="sort-selector"
+            class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
+            </option>
+            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price
+                (low to high)</option>
+            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
+                (high to low)</option>
+            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
+                Rating (low to high)</option>
+            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
+                Rating (high to low)</option>
+            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name
+                (A-Z)</option>
+            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name
+                (Z-A)</option>
+            <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                Category (A-Z)</option>
+            <option value="category_desc"
+                {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+        </select>
     </div>
     <div class="row">
         {% for product in products %}
