--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container-fluid product-container ml-3 ">
-    <div class="row" id="page-header">
-        <div class="col-6">
+<div class="container-fluid product-container">
+    <div class="row allauth-forms">
+        <div class="col-sm-6 col-12 pt-5">
             <div class="allauth-form-inner-content">
                 {% block inner_content %}
                 {% endblock %}
