--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
     <div class="container-fluid product-container">
-        <div class="row pb-5" id="page-header">
-            <div class="col text-center">
-                <h2 class="logo-font">Shopping Cart</h2>
+        <div class="row">
+            <div class="col page-header text-center pt-5">
+                <h1 class="logo-font">Cart</h1>
                 <hr class="mb-1 w-50">
             </div>
         </div>
