--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block content %}
 <div class="container product-container">
-    <div id="page-header" class="row">
-        <div class="col text-center">
+    <div class="row">
+        <div class="col page-header text-center pt-5">
             <h1 class="logo-font">My Profile</h1>
             <hr class="mb-1 w-100">
         </div>
