--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -15,7 +15,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
   <button type="submit">{% trans 'Sign Out' %}</button>
-  <a href="{% url 'home' %}" class="btn btn-primary text-white">Home</a>
+  <a href="{% url 'home' %}" class="btn btn-primary text-white border-0">Home</a>
 </form>
 
 
