Move base template js to separate file

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -62,7 +62,7 @@
 </section>
 {% endblock %}
 
-{% block extra_js %}
+{% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript">
    document.addEventListener('scroll', (e) => {
