--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -3,7 +3,7 @@
 {% block content %}
  {% if user.is_superuser %}
     <div class="col">
-        <div class="row">
+        <div class="row product-form-header">
             <div class="col page-header text-center pt-5">
                 <h1 class="logo-font">Edit Product</h1>
                 <hr class="mb-1 w-50">
