--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,6 +4,12 @@ body, html {
     height: 100%;
     font-family: Oswald, sans-serif;
     scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+  }
+
+  html {
+    overflow-x: auto;
   }
   
   .bg { 
@@ -208,6 +214,10 @@ body, html {
 
     .product-container {
         margin-top: 20vh !important;
+    }
+
+    .product-form-header {
+        padding-top: 10rem;
     }
 }
 
