--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
     </script>
+    <script src="{% static 'base_js/js/base.js' %}"></script>
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
@@ -166,8 +167,6 @@
                         </form>
                     </div>
                 </div>
-                <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'>
-                </script>
             </div>
             <!-- Grid row -->
             <div class="row mt-3">
@@ -237,10 +236,11 @@
 
     {% block postloadjs %}
     {{ block.super }}
-    <script>
-        $('.toast').toast('show');
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.toast').toast('show');
+        });
     </script>
-    <script src="{% static 'base_js/js/base.js' %}"></script>
     {% endblock %}
 
 
