add css to ios devices to fix safari bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -287,3 +287,11 @@ body, html {
         height: 80vw !important;
     }
 }
+
+@supports (-webkit-touch-callout: none) {
+    @media (max-width:450px) {
+        #topnav {
+            display: none;
+        }
+    }
+  }
