update sort select

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -88,6 +88,7 @@
             </div>
         </div>
     </section>
+    {% if user.is_superuser %}
         <div class="row gx-4 gx-lg-5 text-center">
             {% for review in reviews %}
             <div class="col-lg-12 border mb-3">
@@ -96,5 +97,6 @@
             </div>
             {% endfor %}
         </div>
+    {% endif %}
 </div>
 {% endblock %}
