--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<div class="bg p-1">
     <div class="container header-container">
         <div class="row">
             <div class="col"></div>
@@ -23,4 +24,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
