--- a/templates/base.html
+++ b/templates/base.html
@@ -189,8 +189,8 @@
                         Join us on Social Media
                     </h6>
                     <p>
-                        <a href="" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i>
-                            @ Lorem Ipsum
+                        <a href="https://www.facebook.com/people/ProDisc/100084924341202/" target="_blank" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i>
+                            @ Pro Disc
                         </a>
                     </p>
                 </div>
