--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -66,7 +66,7 @@
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Bag">
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Cart">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
