Added to readme

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,11 +5,11 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="{% url 'products' %}?category=putt_approach" class="dropdown-item">Putt & Approach</a>
-                <a href="{% url 'products' %}?category=midrange_multi" class="dropdown-item ">Midrange/Multi</a>
-                <a href="{% url 'products' %}?category=fairway_driver" class="dropdown-item ">Fairway Driver</a>
-                <a href="{% url 'products' %}?category=distance_driver" class="dropdown-item ">Distance Driver</a>
-                <a href="{% url 'products' %}?category=bundels_accesories" class="dropdown-item">Bundels/Accesories</a>
+                <a href="{% url 'products' %}?category=putt_approach" class="dropdown-item">Disc Putt & Approach</a>
+                <a href="{% url 'products' %}?category=midrange_multi" class="dropdown-item ">Disc Midrange/Multi</a>
+                <a href="{% url 'products' %}?category=fairway_driver" class="dropdown-item ">Disc Fairway Driver</a>
+                <a href="{% url 'products' %}?category=distance_driver" class="dropdown-item ">Disc Distance Driver</a>
+                <a href="{% url 'products' %}?category=bundels_accesories" class="dropdown-item">Disc Bundels/Accesories</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
