--- a/static/css/base.css
+++ b/static/css/base.css
@@ -286,4 +286,9 @@ body, html {
     .card-img-top {
         height: 80vw !important;
     }
+
+    .remove-item {
+        float: none !important;
+        margin-top: 1rem;
+    }
 }
