Added agile workflow to readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -189,7 +189,7 @@
                         Join us on Social Media
                     </h6>
                     <p>
-                        <a href="https://www.facebook.com/people/ProDisc/100084924341202/" target="_blank" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i>
+                        <a href="https://www.facebook.com/people/ProDisc/100084924341202/" aria-label="Go to our Facebook page (opens a new tab)" rel="noopener" target="_blank" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i>
                             @ Pro Disc
                         </a>
                     </p>
