--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
             <div class="col-12 col-lg-4 mt-3 py-1 py-lg-0 d-none d-lg-inline-block">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown d-none d-lg-inline-block">
-                        <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown"
+                        <a class="text-white home-icon nav-link" href="#" id="user-options" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             <div class="text-center pl-5">
                                 <div><i class="fas fa-user fa-lg"></i></div>
@@ -84,7 +84,7 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-white{% endif %} nav-link d-none d-lg-inline-block"
+                        <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-white{% endif %} nav-link d-none d-lg-inline-block home-icon"
                             href="{% url 'view_cart' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-cart fa-lg"></i></div>
@@ -107,6 +107,7 @@
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div></div>
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
             </nav>
