Added descriptive meta data to base.html and replaced some text with keywords

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -34,7 +34,7 @@
                 {% endif %}
                 <div class="col-md-6">
                     <div class="small mb-1"><strong>Sku:</strong> {{ product.sku }}</div>
-                    <h1 class="display-5 fw-bolder">{{ product.name }}</h1>
+                    <h1 class="display-5 fw-bolder"><em>{{ product.name }}</em></h1>
                     <div class="fs-5 mb-2">
                         <p><strong>Rating:</strong> {{product.rating}} / 5 <i class="fas fa-star"></i></p>
                         {% if product.discount_percentage %}
