--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,12 +16,12 @@
 
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="{% url 'deals' %}">
-                Deals
+                Disc Golf Deals
             </a>
         </li>
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="{% url 'course_reviews' %}">
-                Course Reviews
+                Disc Golf Courses
             </a>
         </li>
         <li class="nav-item">
