--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Disc Golf{% block extra_title %}{% endblock %}</title>
+    <meta name="description" content="Disc Golf products for sale">
+    <meta name="keywords" content="Disc golf, Disc golf discs, Disc golf courses, Disc golf putter,
+     Disc golf accessories, Disc golf set, Disc golf bag, Disc golf Lover, Disc golf driver, Disc golf midrange, Disc golf fairway, Disc golf bundles">
 
     {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -34,8 +38,6 @@
 
     {% block extra_js %}
     {% endblock %}
-
-    <title>Disc Golf{% block extra_title %}{% endblock %}</title>
 </head>
 
 <body>
