--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -10,13 +10,13 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+                <h1 class="display-4 logo-font text-white">
                     The page you are looking for isn't available
                 </h1>
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'home' %}" 
-                            class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
+                            class="shop-now-button btn btn-lg  btn-danger text-white rounded-0 text-uppercase py-3">
                                 Home
                         </a>
                     </h4>
