Added to SEO section in readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <title>Disc Golf{% block extra_title %}{% endblock %}</title>
     <meta name="description" content="Disc Golf products for sale">
     <meta name="keywords" content="Disc golf, Disc golf discs, Disc golf courses, Disc golf putter,
-     Disc golf accessories, Disc golf set, Disc golf bag, Disc golf Lover, Disc golf driver, Disc golf midrange, Disc golf fairway, Disc golf bundles">
+     Disc golf accessories, Disc golf set, Disc golf bag, Disc golf lover, Disc golf driver, Disc golf midrange, Disc golf fairway, Disc golf bundles">
 
     {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
