--- a/templates/base.html
+++ b/templates/base.html
@@ -229,7 +229,7 @@
 
     {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         $(document).ready(function() {
             $('.toast').toast('show');
         });
